--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Running & Review</a>
+              <a class="nav-link" href="#">Running & Review</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link" href="#" >Programing and Coding</a>
